fix french typography in l10n
Signed-off-by: Bastien Amar <bastien@gurb.org>

--- a/l10n/fr.json
+++ b/l10n/fr.json
@@ -48,7 +48,7 @@
     "Go back" : "Revenir en arrière",
     "Retry" : "Réessayer",
     "Message sent!" : "Message envoyé !",
-    "Reply sent!" : "Réponse envoyé !",
+    "Reply sent!" : "Réponse envoyée !",
     "Write another message" : "Écrire un autre message",
     "Send" : "Envoyer",
     "Uploading {percent}% …" : "Envoi {percent}% …",
