--- a/l10n/ru.json
+++ b/l10n/ru.json
@@ -77,7 +77,7 @@
     "Save all to Files" : "Сохранить все в файлы",
     "Choose a folder to store the attachments in" : "Выбрать папку для сохранения вложений",
     "The images have been blocked to protect your privacy." : "Изображения были заблокированы для защиты вашей частной жизни.",
-    "Show images from this\tsender" : "Показать сообщения от этого\tотправителя",
+    "Show images from this\tsender" : "Показать изображения от этого\tотправителя",
     "New message" : "Создать сообщение",
     "Settings" : "Настройки",
     "Edit account" : "Изменить учётную запись",
