tiny language fixes
 - unify the usage of …
 - 2 tiny typos fixed

--- a/l10n/de_DE.json
+++ b/l10n/de_DE.json
@@ -39,7 +39,7 @@
     "From" : "Von",
     "Select account" : "Konto auswählen",
     "To" : "An",
-    "Contact or email address …" : "Kontakt oder E-Mailadresse",
+    "Contact or email address …" : "Kontakt oder E-Mailadresse …",
     "+ Cc/Bcc" : "+ Cc/Bcc",
     "Cc" : "Cc",
     "No contacts found." : "Keine Kontakte gefunden.",
@@ -48,7 +48,7 @@
     "Subject …" : "Betreff…",
     "This message came from a noreply address so your reply will probably not be read." : "Diese Nachricht stammt von einer Niachtantworten-Adresse, daher wird Ihre Antwort wahrscheinlich nicht gelesen werden.",
     "The following recipients do not have a PGP key: {recipients}." : "Die folgenden Empfänger haben keinen PGP-Schlüssel: {recipients}.",
-    "Write message …" : "Nachricht verfassen...",
+    "Write message …" : "Nachricht verfassen …",
     "Saving draft …" : "Speichere Entwurf …",
     "Draft saved" : "Entwurf gespeichert",
     "Upload attachment" : "Anhang hochladen",
@@ -57,8 +57,8 @@
     "Enable formatting" : "Formatierung aktivieren",
     "Encrypt message with Mailvelope" : "Nachricht mit Mailvelope verschlüsseln",
     "Looking for a way to encrypt your emails? Install the Mailvelope browser extension!" : "Sie suchen nach einer Möglichkeit Ihre E-Mails zu verschlüsseln? Installieren Sie sich hierzu die Browser-Erweiterung Mailvelope!",
-    "Uploading attachments …" : "Lade Anhänge hoch ...",
-    "Sending …" : "Sende…",
+    "Uploading attachments …" : "Lade Anhänge hoch …",
+    "Sending …" : "Sende …",
     "Error sending your message" : "Fehler beim Versenden Ihrer Nachricht",
     "Go back" : "Zurück",
     "Retry" : "Wiederholen",
@@ -67,7 +67,7 @@
     "Send" : "Senden",
     "Encrypt and send" : "Verschlüsseln und senden",
     "Send unencrypted" : "Unverschlüsselt senden",
-    "Uploading {percent}% …" : "Lade hoch ({percent}%)…",
+    "Uploading {percent}% …" : "Lade hoch ({percent}%) …",
     "Choose a file to add as attachment" : "Wählen Sie eine Datei, die als Anhang angefügt werden soll",
     "Choose a file to share as a link" : "Datei auswählen welche als Link geteilt wird",
     "Writing mode" : "Schreibmodus",
@@ -227,10 +227,10 @@
     "Could not load the message" : "Nachricht konnte nicht geladen werden",
     "Error loading message" : "Fehler beim Laden der Nachricht",
     "Forwarding to %s" : "Weiterleiten an %s",
-    "Click here if you are not automatically redirected within the next few seconds." : "Hier klicken, wenn Sie nicht iautomatisch innerhalb der nächsten Sekunden weitergeleitet werden.",
+    "Click here if you are not automatically redirected within the next few seconds." : "Hier klicken, wenn Sie nicht automatisch innerhalb der nächsten Sekunden weitergeleitet werden.",
     "Redirect" : "Weiterleiten",
     "The link leads to %s" : "Der Link führt nach %s",
-    "If you don’t want to visit that page, you can return to <a href=\"%s\">Mail</a>." : "Wenn Sie diese Seite nicht besuchen möchten, können Sie <a href=\"%s\">Mail</a> zurückkehren.",
+    "If you don’t want to visit that page, you can return to <a href=\"%s\">Mail</a>." : "Wenn Sie diese Seite nicht besuchen möchten, können Sie zur <a href=\"%s\">Mail</a> zurückkehren.",
     "Continue to %s" : "Weiter nach %s"
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
