Backport l10n update to stable1.5
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/l10n/tr.json
+++ b/l10n/tr.json
@@ -131,6 +131,7 @@
     "Loading …" : "Yükleniyor …",
     "Not supported by the server" : "Sunucu tarafından desteklenmiyor",
     "{usage} of {limit} used" : "{usage} / {limit} kullanılmış",
+    "The account for {email} and cached email data will be removed from Nextcloud, but not from your email provider." : "{email} hesabı ve ön belleğe alınmış verileri Nextcloud üzerinden silinecek ancak e-posta hizmeti sağlayıcınız üzerinden silinmeyecek.",
     "Remove account {email}" : "{email} hesabını kaldır",
     "Remove {email}" : "{email} sil",
     "Cancel" : "İptal",
@@ -150,6 +151,7 @@
     "Delete folder {name}" : "{name} klasörünü sil",
     "An error occurred, unable to rename the mailbox." : "Bir sorun çıktı. Posta kutusu yeniden adlandırılamadı.",
     "_{total} message_::_{total} messages_" : ["{total} ileti","{total} ileti"],
+    "_{unread} unread of {total}_::_{unread} unread of {total}_" : ["{unread} / {total} okunmamış","{unread} / {total} okunmamış"],
     "Not found" : "Bulunamadı",
     "Could not load your draft" : "Taslağınız yüklenemedi",
     "Could not load original message" : "Özgün ileti yüklenemedi",
@@ -176,9 +178,11 @@
     "Train from {depStation} to {arrStation}" : "{depStation} ile {arrStation} arasında tren",
     "Mail app" : "E-posta uygulaması",
     "The mail app allows users to read mails on their IMAP accounts." : "Mail uygulaması kullanıcıların IMAP hesaplarındaki e-postaları okuyabilmesini sağlar.",
+    "Here you can find instance-wide settings. User specific settings are found in the app itself (bottom-left corner)." : "Burada kopyanın tümünde geçerli olacak ayarlar bulunur. Kullanıcıya özel ayarlar uygulama içinde bulunur (sol alt köşede).",
     "Email: {email}" : "E-posta: {email}",
     "IMAP: {user} on {host}:{port} ({ssl} encryption)" : "IMAP: {host}:{port} üzerindeki {user} (şifreleme {ssl})",
     "SMTP: {user} on {host}:{port} ({ssl} encryption)" : "SMTP: {host}:{port} üzerindeki {user} (şifreleme {ssl}) ",
+    "You can configure a template for account settings, from which all users will get an account provisioned from." : "Hesap ayarları için, tüm kullanıcılara bir hesabın sağlanacağı bir kalıp yapılandırabilirsiniz.",
     "Provision an account for every user" : "Her kullanıcıya bir hesap açılsın",
     "General" : "Genel",
     "Email address" : "E-posta adresi",
