--- a/l10n/de.json
+++ b/l10n/de.json
@@ -79,7 +79,7 @@
     "Draft: " : "Entwurf:",
     "Mark unimportant" : "Als unwichtig markieren",
     "Mark important" : "Als wichtig markieren",
-    "Mark unfavorite" : "Als nicht favorisiert markieren",
+    "Mark unfavorite" : "Favorisierung aufheben",
     "Mark favorite" : "Als favorisiert markieren",
     "Mark unread" : "Als ungelesen markieren",
     "Mark read" : "Als gelesen markieren",
@@ -131,6 +131,7 @@
     "Loading …" : "Lade ...",
     "Not supported by the server" : "Wird vom Server nicht unterstützt",
     "{usage} of {limit} used" : "{usage} von {limit} genutzt",
+    "The account for {email} and cached email data will be removed from Nextcloud, but not from your email provider." : "Das Konto für {E-Mail} und zwischengespeicherte E-Mail-Daten werden aus Nextcloud entfernt, jedoch nicht von Deinem E-Mail-Provider.",
     "Remove account {email}" : "Konto {email} löschen",
     "Remove {email}" : "{email} löschen",
     "Cancel" : "Abbrechen",
@@ -150,6 +151,7 @@
     "Delete folder {name}" : "Ordner löschen {name}",
     "An error occurred, unable to rename the mailbox." : "Es ist ein Fehler aufgetreten, die Mailbox konnte nicht umbenannt werden.",
     "_{total} message_::_{total} messages_" : ["{total} Nachricht","{total} Nachrichten"],
+    "_{unread} unread of {total}_::_{unread} unread of {total}_" : ["{unread} ungelesene von {total}","{unread} ungelesene von {total}"],
     "Not found" : "Nicht gefunden",
     "Could not load your draft" : "Dein Entwurf konnte nicht geladen werden",
     "Could not load original message" : "Original Nachricht konnte nicht geladen werden",
@@ -176,9 +178,11 @@
     "Train from {depStation} to {arrStation}" : "Zug von {depStation} nach {arrStation}",
     "Mail app" : "Mail App",
     "The mail app allows users to read mails on their IMAP accounts." : "Die Mail-App ermöglicht Benutzern E-Mails von ihren IMAP-Konten zu lesen.",
+    "Here you can find instance-wide settings. User specific settings are found in the app itself (bottom-left corner)." : "Hier findest Du instanzweite Einstellungen. Benutzerspezifische Einstellungen finden sich in der App selbst (linke untere Ecke).",
     "Email: {email}" : "E-Mail: {email}",
     "IMAP: {user} on {host}:{port} ({ssl} encryption)" : "IMAP: {user} auf {host}:{port} ({ssl}-Verschlüsslung)",
     "SMTP: {user} on {host}:{port} ({ssl} encryption)" : "SMTP: {user} auf {host}:{port} ({ssl}-Verschlüsslung)",
+    "You can configure a template for account settings, from which all users will get an account provisioned from." : "Du kannst eine Vorlage für Kontoeinstellungen konfigurieren, von welcher alle zukünftigen Konten bereitgestellt werden.",
     "Provision an account for every user" : "Ein Konto für jeden Benutzer bereitstellen",
     "General" : "Allgemein",
     "Email address" : "E-Mail-Adresse",
